--- a/index.html
+++ b/index.html
@@ -2,95 +2,130 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="ASM3" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="index.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>toanpro123</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="index.css">
+  <meta name="backlink" content="DIY">
 </head>
-<div class="menu">
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#">BRAND</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">BROWNSE</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">SIGN UP</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">LOG IN</a>
-              </li> 
-              <li class="nav-item">
-                <a class="nav-link" href="#">HELP</a>
-              </li>  
-            </ul>
-          </div>
-        </div>
-      </nav>      
-</div>
-<div class="container-fluid p-5">
-    <div class="content">
-        <div class="banner">
-            <div class="banner-1">
-                <h1>Find a place to stay.</h1>
-            </div>
-            <div class="rent">
-                <div class="text2"></div>
-                <p>Rent from people in over 34,000 cities and 192 countries</p>
-            </div>
-            <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/lodging.png" alt=""
-                class="banner-img">
-        </div>
-        <hr>
-        <h1>Neighborhood Guides</h1>
-        <p>Not sure where to stay?We've created neighborhood guides for cities all around the world.</p>
-    </div>
-    <div class="row">
-        <div class="col-12 col-md-6 col-lg-4"> <img
-                src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/mexico-city.png?fbclid=IwAR26g8b_YeyUck_t2ShE5QYrB6lXnvqytIldN9ANKGu5Y6L3MNoe3RLdhxo"
-                alt="">
-            <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/ny.png?fbclid=IwAR2bdB1TYHxqhCGQnX_RXZpbjn4BI-xle97RDuQfr5_g8VbHHVfZagOsUIg"
-                alt="">
-        </div>
 
-        <div class="col-12 col-md-6 col-lg-4"> <img
-                src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/tokyo.png?fbclid=IwAR34rjjK4dlzYDte3dmF9AMVsz8JSa14AguqMvFd15CsK8DW4kjIynrP20w"
-                alt="">
-            <img src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/paris.png?fbclid=IwAR28EeJdKTwDltTfUM3dkBs9lmoiZ6aGerHvw1oPchYRMO2J7RtbopRs08c"
-                alt="">
+<body>
+  <div class="menu">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index1.html">
+          <DIY class="JPG"> <img src="D:\images2.jpg" alt=""></DIY>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index2.html">Trang Trí</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index3.html">Đồ Vật</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index5.html">Quà Tặng</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index4.html">Nội Thất</a>
+            </li>
+           
         </div>
-        <div class="col-12 col-md-6 col-lg-4"> <img
-                src="https://s3.amazonaws.com/codecademy-content/courses/ltp/img/invite.png?fbclid=IwAR2ww_JiMJiEsEY6upSMlJDbf8urs12xSbCwno6LlvN7CSbAtujOJIUd4LE"
-                alt="">
-        </div>
-    </div>
-    <div class="container mt-5">
-        <div class="row">
-          <div class="col-sm-4">
-            <h3>Travel</h3>
-            <p>From apartments and rooms to treehouses and boats: stay in unique spaces in 192 countries</p>
-            <a href="#">see how to travel on Airbnb</a>
-          </div>
-          <div class="col-sm-4">
-            <h3>Host</h3>
-            <p>Renting out your unused space could pay your bills or fund your next vacation</p>
-            <a href="#">learn more about hosting </a>
-          </div>
-          <div class="col-sm-4">
-            <h3>Trust and Safety</h3>        
-            <p>from verified ID to our worldwide customer support team, we've got your back</p>
-            <a href="#">Learn more about trust at Airbnb</a>
-          </div>
+        <div class="search">
+          <form class="d-flex">
+            <input class="form-control me-2" type="text" placeholder="Search">
+            <button class="btn btn-primary" type="button">Search</button>
+          </form>
+          </ul>
         </div>
       </div>
+  </div>
+  </nav>
+  <div class="container-fluid mt-3">
+    <div class="banner">
+      <div>
+        <img src="C:\Users\ASUS\Downloads\DO IT YOURSELF (1).png" alt="waiting">
+      </div>
+    </div>
+  </div>
+
+  <hr class="mx-4 text mt-5">
+
+  <div class="header">
+    <h1>CÁC Ý TƯỞNG ĐƠN GIẢN</h1>
+  </div>
+
+  <hr class="mx-4 text mt-5">
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-4 bg p-3">
+        <img src="D:\trang trí bạn có thể tự làm (DIY) 1.jpg" alt="" style="width: 100%;">
+      </div>
+      <div class="col-8 bg p-3">
+        <h2>Nơi giúp căn nhà của bạn thêm thú vị hơn !!!</h2>
+        <p>Những mẹo trang trí DIY sẽ giúp cuộc sống của bạn dễ dàng hơn nhiều và bạn sẽ tự hỏi bạn đã sống như thế nào
+          mà không có chúng. Những cách này vừa rẻ, vừa dễ và sẽ giải quyết hết tất cả những phàn nàn của bạn</p>
+        <a href="index2.html" class="btn btn-primary">xem thêm</a>
+      </div>
+    </div>
+  </div>
+
+  <hr class="mx-4 text mt-5">
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-9 bg p-3">
+        <h2>Ý tưởng tái chế độc đáo từ vật dụng đơn giản</h2>
+        <p>Chúng ta thường nghĩ rằng có nhiều vật dụng sau khi vứt đi không sử dụng được, tuy nhiên chỉ với một chút
+          công sức và sáng tạo, bạn có thể biến những vật dụng ấy trở nên có giá trị</p>
+        <a href="index3.html" class="btn btn-primary">xem thêm</a>
+        
+      </div>
+      <div class="col-3 bg p-3">
+        <img src="D:\vi-trung-giay-cu.jpg" alt="" style="width: 100%;">
+      </div>
+    </div>
+  </div>
+
+  <hr class="mx-4 text mt-5">
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-4 bg p-3">
+        <img src="D:\qua-tang-2_1678534103.png" alt="" style="width: 100%;">
+      </div>
+      <div class="col-8 bg p-3">
+        <h2> Quà handmade tặng người thân độc đáo</h2>
+        <p>Thay vì chọn những vật phẩm có sẵn, bạn có thể tự tay làm món quà ngày tặng mẹ, người yêu độc đáo, ý
+          nghĩa như số tay, nón handmade...</p>
+        <a href="index5.html" class="btn btn-primary">xem thêm</a>
+      </div>
+    </div>
+  </div>
+
+  <hr class="mx-4 text mt-5">
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-9 bg p-3">
+        <h2>Những ý tưởng DIY cho đồ nội thất nhà ở</h2>
+        <p> Xu hướng DIY đã và đang phát triển rộng rãi, đặc biệt trong thị trường nội thất. Nhờ DIY mà mọi người được
+          thỏa thích sáng tạo, chế tác ra những món đồ nội thất phục vụ cho chính bản thân và gia đình</p>
+        <a href="index4.html" class="btn btn-primary">xem thêm</a>
+      </div>
+      <div class="col-3 bg p-3">
+        <img src="D:\maxresdefault.jpg" alt="" style="width: 100%;">
+      </div>
+    </div>
+  </div>
+</body>
+
+</html>
